--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "~4.14.0",
     "hbs": "~3.1.0",
     "morgan": "~1.6.1",
+    "nodemon": "^2.0.4",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.5.0",
     "serve-favicon": "~2.3.0",
